--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
       <div class="popup">
         <span class="close">&times;</span>
         <h1>You Won! YAYYY!</h1>
-        <h3 class="pop-moves"></h3>
-        <h3 class="pop-time"></h3>
-        <h3 class="pop-stars"></h3>
+         <h3>Movies:</h3><h3 class="pop-moves"></h3>
+        <h3 class="pop-time">Time: </h3>
+        <h3 class="pop-stars"> </h3>
       </div>
 
     </div>
