fix star, moves count in popup

--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
       <div class="popup">
         <span class="close">&times;</span>
         <h1>You Won! YAYYY!</h1>
-         <h3>Movies:</h3><h3 class="pop-moves"></h3>
-        <h3 class="pop-time">Time: </h3>
-        <h3 class="pop-stars"> </h3>
+            <h3><span class="pop-moves"></span> Moves</h3>
+            <h3><span class="pop-time"> </span> Time</h3>
+            <h3> <span class="pop-stars"> </span> Stars </h3>
       </div>
 
     </div>
