--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
         </section>
 
-        <ul class="deck">
+        <ul class="deck" id="card-deck">
             <li class="card">
                 <i class="fa fa-diamond"></i>
             </li>
