implement play agian button

--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
             <h3><span class="pop-moves"></span> Moves</h3>
             <h3><span class="pop-time"> </span> Time</h3>
             <h3> <span class="pop-stars"> </span> Stars </h3>
+            <button class="play-again">Play again</button>
       </div>
 
     </div>
